# mpt-api-python-client

./: .env.example  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.yaml  docker-compose.yml  e2e_config.test.json  makefile  prod.Dockerfile  pyproject.toml  setup.cfg  sonar-project.properties
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: copilot-instructions.md  cron-main-e2e.yml  pr-build-merge.yml  pull-request.yml  push-release-branch.yml  release.yml
docs/: PROJECT_DESCRIPTION.md  architecture.md  contributing.md  documentation.md  e2e_tests.md  local-development.md  rql.md  testing.md  unit_tests.md  usage.md
make/: common.mk  repo.mk
mpt_api_client/: __init__.py  client.py  config.py  constants.py  exceptions.py  mpt.py  mpt_client.py  mptclient.py  register.py  registry.py  utils.py
mpt_api_client/auth/: __init__.py  account_scoped.py  base.py  cli_account.py  extension_framework.py  jwt.py
mpt_api_client/http/: __init__.py  async_client.py  async_service.py  authentication.py  base_service.py  client.py  client_utils.py  collection.py  helper.py  mixins.py  models.py  query_options.py  query_state.py  request_response_utils.py  resource.py  resource_accessor.py  service.py  types.py  url_utils.py
mpt_api_client/http/mixins/: __init__.py  collection_mixin.py  create_file_mixin.py  create_mixin.py  delete_mixin.py  disable_mixin.py  download_file_mixin.py  enable_mixin.py  file_operations_mixin.py  get_mixin.py  queryable_mixin.py  resource_mixins.py  stream_jsonl_mixin.py  update_file_mixin.py  update_mixin.py
mpt_api_client/models/: __init__.py  attachment_model.py  base.py  collection.py  document_model.py  file_model.py  file_resource_model.py  media_model.py  meta.py  model.py  model_collection.py  progress.py  resource.py  term_variant_model.py
mpt_api_client/modules/: __init__.py  order.py
mpt_api_client/resources/: __init__.py  order.py  webhooks.py
mpt_api_client/resources/accounts/: __init__.py  account.py  account_user_groups.py  account_users.py  accounts.py  accounts_user_groups.py  accounts_users.py  api_tokens.py  buyers.py  cloud_tenants.py  erp_links.py  licensees.py  mixins.py  modules.py  sellers.py  user_groups.py  users.py
mpt_api_client/resources/audit/: __init__.py  audit.py  event_types.py  records.py
mpt_api_client/resources/billing/: __init__.py  billing.py  credit_memo_attachments.py  credit_memos.py  custom_ledger_attachments.py  custom_ledger_charges.py  custom_ledger_upload.py  custom_ledgers.py  invoice_attachments.py  invoices.py  journal_attachments.py  journal_charges.py  journal_sellers.py  journal_upload.py  journals.py  ledger_attachments.py  ledger_charges.py  ledgers.py  manual_overrides.py  mixins.py  statement_attachments.py  statement_charges.py  statements.py
mpt_api_client/resources/catalog/: __init__.py  authorizations.py  catalog.py  items.py  listings.py  mixins.py  price_list_items.py  price_lists.py  pricing_policies.py  pricing_policy_attachments.py  product_term_variants.py  product_terms.py  products.py  products_documents.py  products_item_groups.py  products_items.py  products_media.py  products_parameter_groups.py  products_parameters.py  products_templates.py  units_of_measure.py
mpt_api_client/resources/commerce/: __init__.py  agreements.py  agreements_attachments.py  assets.py  commerce.py  mixins.py  orders.py  orders_asset.py  orders_subscription.py  requests.py  subscriptions.py
mpt_api_client/resources/exchange/: __init__.py  currencies.py  exchange.py
mpt_api_client/resources/extensibility/: __init__.py  extensibility.py  extensions.py
mpt_api_client/resources/helpdesk/: __init__.py  cases.py  channel_messages.py  channels.py  chat_answer_parameters.py  chat_answers.py  chat_attachments.py  chat_links.py  chat_messages.py  chat_participants.py  chats.py  forms.py  helpdesk.py  parameter_group_parameters.py  parameter_groups.py  parameters.py  queues.py
mpt_api_client/resources/integration/: __init__.py  categories.py  extension_documents.py  extension_installations.py  extension_instances.py  extension_media.py  extension_term_variants.py  extension_terms.py  extensions.py  installations.py  installations_token.py  integration.py
mpt_api_client/resources/mixins/: __init__.py  attachment_mixin.py  document_mixin.py  media_mixin.py  publishable_mixin.py  render_mixin.py  reviewable_mixin.py
mpt_api_client/resources/notifications/: __init__.py  accounts.py  batches.py  categories.py  contacts.py  messages.py  notifications.py  subscribers.py
mpt_api_client/resources/program/: __init__.py  certificates.py  enrollments.py  enrollments_attachments.py  program.py  programs.py  programs_documents.py  programs_media.py  programs_parameter_groups.py  programs_parameters.py  programs_templates.py  programs_terms.py  programs_terms_variant.py
mpt_api_client/rql/: __init__.py  query_builder.py
seed/: container.py  context.py  defaults.py  helper.py  main.py  seed_api.py
seed/accounts/: account.py  accounts.py  api_tokens.py  buyer.py  licensee.py  module.py  seller.py  user_group.py
seed/catalog/: authorization.py  catalog.py  item.py  item_group.py  listing.py  price_list.py  product.py  product_parameters.py  product_parameters_group.py
seed/commerce/: agreement.py  commerce.py
seed/static/: static.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_mpt.py  test_mpt_client.py  test_register.py  test_registry.py
tests/data/: test_billing_journal.jsonl  test_billing_journal.xlsx  test_custom_ledger.xlsx
tests/e2e/: conftest.py  helper.py  test_access.py  test_e2e.py
tests/http/: conftest.py  test_async_client.py  test_async_service.py  test_base_service.py  test_client.py  test_mixins.py  test_query_state.py  test_service.py
tests/models/: test_file_model.py
tests/modules/: test_order.py
tests/seed/: __init__.py  conftest.py  test_context.py  test_helper.py  test_seed_api.py
tests/unit/: conftest.py  test_constants.py  test_exceptions.py  test_mpt_client.py  test_utils.py
(+696 files in other folders)
